// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout should return an object with the total and the list of items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas running shoes - men",
      },
      "quantity": 4,
    },
    {
      "product": {
        "price": 41872,
        "title": "Adidas running shoes - women",
      },
      "quantity": 2,
    },
  ],
  "total": {
    "amount": 225296,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout should return an object with the total and the list of items when summary() is called 1`] = `
{
  "formatted": "R$2,252.96",
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas running shoes - men",
      },
      "quantity": 4,
    },
    {
      "product": {
        "price": 41872,
        "title": "Adidas running shoes - women",
      },
      "quantity": 2,
    },
  ],
  "total": {
    "amount": 225296,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
